--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,22 +1,25 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating App</a>
+        <a class="navbar-brand" routerLink='/'>Dating App</a>
         
-          <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Matches</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Lists</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
-            </li>
-            <!--<li class="nav-item">
-              <a class="nav-link" (click)="logout()" href="#">Logout</a>
-            </li>
-          
-            -->
+          <ul class="navbar-nav mr-auto">
+            <ng-container *ngIf="accountService.currentUser$ | async">
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Lists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
+              </li>
+              <!--<li class="nav-item">
+                <a class="nav-link" (click)="logout()" href="#">Logout</a>
+              </li>
+            
+              -->
+            </ng-container>
+           
           </ul> 
           <!-- 
           <div class="dropdown" *ngIf="loggedIn" dropdown>
@@ -29,10 +32,13 @@
           </div>
           */ 
           //-->
-          <div class="btn-group" *ngIf="accountService.currentUser$|async "  dropdown>
-            <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                    aria-controls="dropdown-basic">
-              Welcome User! <span class="caret"></span>
+          <div class="btn-group" *ngIf="(accountService.currentUser$|async) as _user "  dropdown>
+            <button id="button-basic" dropdownToggle type="button" 
+              class="btn btn-primary dropdown-toggle"
+              aria-controls="dropdown-basic">
+              <a> Welcome {{_user.userName | uppercase}} !  </a>
+              
+              <span class="caret"></span>
             </button>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                 role="menu" aria-labelledby="button-basic">
@@ -59,7 +65,7 @@
               class="form-control mr-sm-2" 
               type="password" 
               placeholder="Password">
-            <button class="btn btn-outline-success" type="submit">Login</button>
+            <button class="btn btn-secondary" type="submit">Login</button>
           </form>
     </div>
 </nav>
